# rust-for-amigaos4

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  build.bat  build.sh  cargo-amiga.bat  cargo-amiga.sh  rust-toolchain.toml  setup.bat  setup.sh
.github/workflows/: ci.yml
Tests/: Cargo.toml  README.md
Tests/src/: lib.rs  main.rs
Tests/tests/: api_smoke.rs  combined_amigaos4.rs  doc_claims.rs  repro.rs  rust_regression.rs  rust_sdk_audit.rs  rust_signature_audit.rs
amigaos4/: CHANGELOG.md  Cargo.toml
amigaos4-alloc/: CHANGELOG.md  Cargo.toml
amigaos4-alloc/src/: clib4_alloc.rs  exec_alloc.rs
amigaos4-sys/: CHANGELOG.md  Cargo.toml
amigaos4-sys/glue/: amiga_glue.c
amigaos4-sys/src/: lib.rs  ppc_asm.rs
amigaos4/src/: async_rt.rs  boopsi.rs  clipboard.rs  dns.rs  dos.rs  env.rs  error.rs  fmt.rs  fs.rs  gfx.rs  http.rs  io.rs  lib.rs  locale.rs  mem.rs  net.rs  panic.rs  port.rs  reaction.rs  requester.rs  screen.rs  tag.rs  thread.rs  time.rs  timer.rs  window.rs
amigaos4/tests/: host_tests.rs
docs/: nostd-ecosystem.md  phase1-progress.md  phase10-progress.md  phase2-progress.md  phase3-progress.md  phase4-progress.md  phase5-progress.md  phase6-progress.md  phase7-progress.md  phase8-progress.md  phase9-progress.md  roadmap.md
examples/async-demo/: Cargo.toml
examples/file-io-demo/: Cargo.toml
examples/gui-demo/: Cargo.toml
examples/hello/: Cargo.toml  hello
examples/hello-driver/: Makefile  hello-driver
examples/hello-library/: Cargo.toml  Makefile  hello.library
examples/locale-i18n-hello/: Cargo.toml  (+2 more)
(+126 files in other folders)
